After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702470 - rtsp-media: The element is leaked in take_pipeline
rtsp-media: The element is leaked in take_pipeline
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-17 14:53 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-02-25 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not leak the element in take_pipeline (2.35 KB, patch)
2013-06-17 14:53 UTC, Ognyan Tonchev (redstar_)
none Details | Review

Description Ognyan Tonchev (redstar_) 2013-06-17 14:53:14 UTC
Created attachment 247039 [details] [review]
Do not leak the element in take_pipeline

The element is leaked if take_pipeline () is called more than once.
Comment 1 Wim Taymans 2013-06-17 15:19:09 UTC
commit d9e245e62eeb9792d2eac3e0c84710c968a1d84f
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Mon Jun 17 16:47:56 2013 +0200

    rtsp-media: Do not leak the element in take_pipeline
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=702470