rtsp-media: Do not leak the element in take_pipeline

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=702470